--- a/OnlyPan/Views/Home/Index.cshtml
+++ b/OnlyPan/Views/Home/Index.cshtml
@@ -1,8 +1,101 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="">
+
+
+        <div class="flex sm:flex-col md:flex-row py-3">
+            <div class="md:w-1/2 px-4 ">
+                <!-- Tarjeta izquierda -->
+                <div class=" p-4">
+
+
+                    <!-- Inicio Tarjeta -->
+                    <div class=" mx-auto bg-white rounded-lg overflow-hidden shadow-lg">
+                        <div class="bg-gradient-to-r from-first-color to-second-color text-black p-4">
+                            <!-- Contenido de la cabecera de la tarjeta -->
+                            <h1 class="text-2xl font-bold">¿Qué es OnlyPan?</h1>
+                            <h2 class="pt-4">Tu Mejor Amigo A La Hora De Aprender a Cocinar</h2>
+
+                        </div>
+                        <div class="p-4 py-0">
+                            <!-- Contenido principal de la tarjeta -->
+                            <p class="text-base text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                        </div>
+                        <div class="bg-third-color text-black p-4">
+                            <!-- Contenido del pie de la tarjeta -->
+                            <p class="text-sm">Pie de la tarjeta con información adicional.</p>
+                        </div>
+                    </div>
+                    <!-- Fin Tarjeta -->
+
+
+                </div>
+            </div>
+            <div class="md:w-1/2"></div> <!-- Espacio vacío a la derecha -->
+        </div>
+
+
+        <div class="flex sm:flex-col md:flex-row">
+            <div class="md:w-1/2"></div> <!-- Espacio vacío a la izquierda -->
+            <div class="md:w-1/2  px-4">
+                <!-- Tarjeta derecha -->
+                <div class="p-4">
+
+                    <!-- Inicio Tarjeta -->
+                    <div class=" mx-auto bg-white rounded-lg overflow-hidden shadow-lg">
+                        <div class="bg-gradient-to-r from-first-color to-second-color text-black p-4">
+                            <!-- Contenido de la cabecera de la tarjeta -->
+                            <h1 class="text-2xl font-bold">Título de la Tarjeta</h1>
+                            <p class="text-sm">Subtítulo o descripción corta</p>
+                        </div>
+                        <div class="p-4">
+                            <!-- Contenido principal de la tarjeta -->
+                            <p class="text-base text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget venenatis neque.</p>
+                        </div>
+                        <div class="bg-third-color text-black p-4">
+                            <!-- Contenido del pie de la tarjeta -->
+                            <p class="text-sm">Pie de la tarjeta con información adicional.</p>
+                        </div>
+                    </div>
+                    <!-- Fin Tarjeta -->
+
+                </div>
+            </div>
+        </div>
+
+        <div class="flex sm:flex-col md:flex-row">
+            <div class="md:w-1/2 px-4">
+                <!-- Tarjeta izquierda -->
+                <div class=" p-4 ">
+
+                    <!-- Inicio Tarjeta -->
+                    <div class="mx-auto bg-white rounded-lg overflow-hidden shadow-lg">
+                        <div class=" text-black p-4">
+                            <!-- Contenido de la cabecera de la tarjeta -->
+                            <h1 class="text-2xl font-bold">Título de la Tarjeta</h1>
+                            <p class="text-sm">Subtítulo o descripción corta</p>
+                        </div>
+                        <div class="p-4">
+                            <!-- Contenido principal de la tarjeta -->
+                            <p class="text-base text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget venenatis neque.</p>
+                        </div>
+                        <div class="bg-third-color text-black p-4">
+                            <!-- Contenido del pie de la tarjeta -->
+                            <p class="text-sm">Pie de la tarjeta con información adicional.</p>
+                        </div>
+                    </div>
+                    <!-- Fin Tarjeta -->
+
+                </div>
+            </div>
+            <div class="md:w-1/2"></div> <!-- Espacio vacío a la derecha -->
+        </div>
+
+
+    </div>
+
 </div>
