--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -1,13 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root{
-  --first-color:#BC0119;
-  --second-color: #C7814A;
-  --third-color:  #BCA693;
-  --fourth-color:#1D4E17;
-  --black: #0B100C;  
+:root {
+    --first-color: #BC0119;
+    --second-color: #C7814A;
+    --third-color: #BCA693;
+    --fourth-color: #1D4E17;
+    --black: #0B100C;
 }
-.navbar{
-  background-color: rgb(254,215,170);
+
+.navbar {
+    background-color: rgb(254, 215, 170);
 }
