--- a/OnlyPan/Views/User/Register.cshtml
+++ b/OnlyPan/Views/User/Register.cshtml
@@ -1,11 +1,4 @@
-<!--
-This example requires updating your template:
-
-```
-<html class="h-full bg-white">
-<body class="h-full">
-```
--->
+@model OnlyPan.Models.ViewModels.UsuarioViewModel
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
@@ -14,40 +7,44 @@ This example requires updating your template:
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form class="space-y-6" asp-action="Register">
+    <form method="post" class="space-y-6" asp-controller="User" asp-action="Register">
+      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
       <div>
-        <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Nombre de usuario</label>
-        <div class="mt-2">
-          <input id="username" name="username" type="email" autocomplete="email" required class="block w-full rounded-md
-          border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
-          focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
+        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Nombre"></label>
+        <input class="block w-full rounded-md
+        border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+        focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Nombre">
+        <span asp-validation-for="Nombre" class="text-danger"></span>
       </div>
       <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo Electronico</label>
-        <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md 
+        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Correo"></label>
+        <input class="block w-full rounded-md 
           border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
-          focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
+          focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Correo">
+        <span asp-validation-for="Correo" class="text-danger"></span>
+      </div>
+      <div>
+        <label asp-for="Contrasena" class="block text-sm font-medium leading-6 text-gray-900"></label>
+        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Contrasena">
+        <span asp-validation-for="Contrasena" class="text-danger"></span>
+      </div>
+      <div>
+        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="ConfirmarContra"></label>
+        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset 
+                  ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 
+                  sm:text-sm sm:leading-6" asp-for="ConfirmarContra">
+        <span asp-validation-for="ConfirmarContra" class="text-danger"></span>
       </div>
 
       <div>
-        <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
-        </div>
-        <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block
-          w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 
-          placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-        </div>
-      </div>
-
-      <div>
-        <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm 
-        font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 
-        focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
+        <input type="submit" value="Registrarme" class="btn btn-primary bg-blue-500 self-center">
       </div>
     </form>
   </div>
 </div>
+
+@section Scripts{
+  @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+  }
+}
