Refactorized and created the LoginViewModel.cs

--- a/OnlyPan/Views/User/Register.cshtml
+++ b/OnlyPan/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-@model OnlyPan.Models.ViewModels.UsuarioViewModel
+@model OnlyPan.Models.ViewModels.RegisterViewModel
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
@@ -25,7 +25,9 @@
       </div>
       <div>
         <label asp-for="Contrasena" class="block text-sm font-medium leading-6 text-gray-900"></label>
-        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Contrasena">
+        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 
+               placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" 
+               asp-for="Contrasena">
         <span asp-validation-for="Contrasena" class="text-danger"></span>
       </div>
       <div>
