Added the basic user interface for login into the platform ant the LoginViewModel.cs

--- a/OnlyPan/Views/User/Login.cshtml
+++ b/OnlyPan/Views/User/Login.cshtml
@@ -1,1 +1,37 @@
-Login en proceso
+@model OnlyPan.Models.ViewModels.LoginViewModel
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
+      Inicio de sesión
+    </h2>
+  </div>
+
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form method="get" class="space-y-6" asp-controller="User" asp-action="Login">
+      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+      <div>
+        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Correo"></label>
+        <input class="block w-full rounded-md 
+          border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+          focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Correo">
+        <span asp-validation-for="Correo" class="text-danger"></span>
+      </div>
+      <div>
+        <label asp-for="Contra" class="block text-sm font-medium leading-6 text-gray-900"></label>
+        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 
+               placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" 
+               asp-for="Contra">
+        <span asp-validation-for="Contra" class="text-danger"></span>
+      </div>
+      <div>
+        <input type="submit" value="Iniciar sesión" class="btn btn-primary bg-blue-500 self-center">
+      </div>
+    </form>
+  </div>
+</div>
+
+@section Scripts{
+  @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+  }
+}
