--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html lang="en" class="h-full bg-white">
 <head>
   <meta charset="utf-8"/>
@@ -38,17 +39,28 @@
         <button class="btn bg-green-600 btn-success text-white" type="submit">Buscar</button>
       </form>
       <!--Login buttons-->
-      <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
-        <li class="nav-item">
-          <a class="btn btn-primary bg-blue-500" asp-area="" asp-controller="User" asp-action="Login">Iniciar Sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-primary bg-blue-500"
-             asp-area="" asp-controller="User" asp-action="Register">
-            Registrate
-          </a>
-        </li>
-      </ul>
+      @if (Context.User.Identity is {IsAuthenticated: true })
+      {
+        <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
+          <li class="nav-item">
+            <a class="btn btn-primary bg-white text-blue-500" asp-area="" asp-controller="User" asp-action="Logout">Cerrar Sesión</a>
+          </li>
+        </ul>
+      }
+      else
+      {
+        <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
+          <li class="nav-item">
+            <a class="btn btn-primary bg-blue-500" asp-area="" asp-controller="User" asp-action="Login">Iniciar Sesión</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-primary bg-blue-500"
+               asp-area="" asp-controller="User" asp-action="Register">
+              Registrate
+            </a>
+          </li>
+        </ul>
+      }
       @{
         /*
       <<div class="space-x-1.5">
