Added verification if the email is into the database

--- a/OnlyPan/Views/User/Register.cshtml
+++ b/OnlyPan/Views/User/Register.cshtml
@@ -40,6 +40,7 @@
 
       <div>
         <input type="submit" value="Registrarme" class="btn btn-primary bg-blue-500 self-center">
+        <span class="alert-danger">@ViewBag.Error</span>
       </div>
     </form>
   </div>
