Refactorized the controller RoleController.cs

--- a/OnlyPan/Views/Role/ViewRole.cshtml
+++ b/OnlyPan/Views/Role/ViewRole.cshtml
@@ -40,8 +40,8 @@
         @Html.DisplayFor(m=> vaPetition.FechaSolicitud)
       </td>
       <td>
-        <a  class="link-success space-x-1.5" asp-action="AcceptPetition" asp-controller="Rol" asp-route-petitionId="@vaPetition.IdSolicitud">Aceptar Solicitud</a>
-        <a class="link-danger space-x-1.5" asp-action="RejectPetition" asp-controller="Rol" asp-route-petitionId="@vaPetition.IdSolicitud">Rechazar Solicitud</a>
+        <a  class="link-success space-x-1.5" asp-action="AcceptPetition" asp-controller="Role" asp-route-petitionId="@vaPetition.IdSolicitud">Aceptar Solicitud</a>
+        <a class="link-danger space-x-1.5" asp-action="RejectPetition" asp-controller="Role" asp-route-petitionId="@vaPetition.IdSolicitud">Rechazar Solicitud</a>
       </td>
     </tr>
   }
