--- a/OnlyPan/Views/Role/Petition.cshtml
+++ b/OnlyPan/Views/Role/Petition.cshtml
@@ -7,7 +7,7 @@
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form method="post" class="space-y-6" asp-controller="Rol" asp-action="Petition">
+    <form method="post" class="space-y-6" asp-controller="Role" asp-action="Petition">
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
       <div>
         <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Rol"></label>
