--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
       {
         <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
           <li class="nav-item">
+            <a class="btn btn-primary bg-white text-blue-500" asp-area="" asp-controller="User" asp-action="Profile">Perfil</a>
             <a class="btn btn-primary bg-white text-blue-500" asp-area="" asp-controller="User" asp-action="Logout">Cerrar Sesión</a>
           </li>
         </ul>
