--- a/OnlyPan/Views/User/Register.cshtml
+++ b/OnlyPan/Views/User/Register.cshtml
@@ -11,9 +11,7 @@
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
       <div>
         <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Nombre"></label>
-        <input class="block w-full rounded-md
-        border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
-        focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Nombre">
+        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Nombre">
         <span asp-validation-for="Nombre" class="text-danger"></span>
       </div>
       <div>
