--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -1,10 +1,11 @@
 @model List<Usuario>
 
 <div class="container-fluid">
-<h1>Perfil de usuario</h1>
-  <!--TODO Display the profile into a floating card-->
+  <h1>Perfil de usuario</h1>
+  <!--TODO Display the profile into a more atractive way-->
   <div class="">
-    <img class="img-fluid" src="@Model.First().Foto" alt="User img"/>
+    <img class="img-fluid" src="data:image;base64,@Convert.ToBase64String(Model.First().Foto!)"
+         alt="User img"/>
     <div>
       <p class="">Nombre de usuario:<span>@Model.First().Nombre</span></p>
       <p class="">Correo Electronico:<span>@Model.First().Correo</span></p>
