Added the HttpPost for editing the user profile, theres a bug that the image is uploading as a string not as a IFormFile

--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -13,6 +13,7 @@
       <div>
         <a asp-action="EditProfile" asp-controller="User" class="btn btn-primary">Editar Perfil de usuario</a>
         <a asp-action="Petition" asp-controller="Role" class="btn btn-primary">Solicitar Rol</a>
+        <span class="text-success">@ViewBag.Sucess</span>
       </div>
     </div>
   </div>
