--- a/OnlyPan/Views/User/EditProfile.cshtml
+++ b/OnlyPan/Views/User/EditProfile.cshtml
@@ -12,16 +12,16 @@
         <input asp-for="Name" value="@ViewBag.Name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
       </div>
       <div class="group">
-        <label asp-for="Correo" class="block text-sm font-medium leading-6 text-gray-900"></label>
-        <input asp-for="Correo" value="@ViewBag.Email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        <label asp-for="Email" class="block text-sm font-medium leading-6 text-gray-900"></label>
+        <input asp-for="Email" value="@ViewBag.Email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+      </div>
+      <div class="group">
+        <label asp-for="Photo" class="block text-sm font-medium leading-6 text-gray-900"></label>
+        <input asp-for="Photo" type="file" class="block w-full rounded-md">
       </div>
       <div class="group">
         <label class="block text-sm font-medium leading-6 text-gray-900">Rol</label>
         <input disabled="disabled" value="@ViewBag.Rol" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-      </div>
-      <div class="group">
-        <label asp-for="Foto" class="block text-sm font-medium leading-6 text-gray-900"></label>
-        <input asp-for="Foto" type="file" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
       </div>
       <input type="submit" value="Confirmar Edicion" class="btn btn-primary"/>
       <span class="text-danger">@ViewBag.Error</span>
