Added the funcionality of sending a email for activation and the process of activating the account, changed the email library to MailKit, and fixed the viewbag messages

--- a/OnlyPan/Views/User/Login.cshtml
+++ b/OnlyPan/Views/User/Login.cshtml
@@ -30,6 +30,7 @@
       <div>
         <input type="submit" value="Iniciar sesión" class="btn btn-primary bg-blue-500 self-center">
         <span class="alert-danger">@ViewBag.Error</span>
+        <span class="alert-success">@ViewBag.Success</span>
       </div>
     </form>
   </div>
