--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -1,15 +1,15 @@
-@model List<Usuario>
+@model Usuario
 
 <div class="container-fluid">
   <h1>Perfil de usuario</h1>
   <!--TODO Display the profile into a more atractive way-->
   <div class="">
-    <img class="img-fluid" src="data:image;base64,@Convert.ToBase64String(Model.First().Foto!)"
+    <img class="img-fluid" src="data:image;base64,@Convert.ToBase64String(Model.Foto!)"
          alt="User img"/>
     <div>
-      <p class="">Nombre de usuario:<span>@Model.First().Nombre</span></p>
-      <p class="">Correo Electronico:<span>@Model.First().Correo</span></p>
-      <p class="">Rol:<span>@Model.First().RolNavigation.NombreRol</span></p>
+      <p class="">Nombre de usuario:<span>@Model.Nombre</span></p>
+      <p class="">Correo Electronico:<span>@Model.Correo</span></p>
+      <p class="">Rol:<span>@Model.RolNavigation.NombreRol</span></p>
       <div>
         <a asp-action="EditProfile" asp-controller="User" class="btn btn-primary">Editar Perfil de usuario</a>
         <a asp-action="Petition" asp-controller="Role" class="btn btn-primary">Solicitar Rol</a>
