--- a/OnlyPan/Views/User/ResetPassword.cshtml
+++ b/OnlyPan/Views/User/ResetPassword.cshtml
@@ -1,26 +1,15 @@
-@model OnlyPan.Models.ViewModels.RegisterViewModel
+@model OnlyPan.Models.ViewModels.ResetPasswordViewModel
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
-      Registrate en nuestra plataforma
+      Restablece tu contraseña
     </h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form method="post" class="space-y-6" asp-controller="User" asp-action="Register">
+    <form method="post" class="space-y-6" asp-controller="User" asp-action="ResetPassword">
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-      <div>
-        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Name"></label>
-        <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Name">
-        <span asp-validation-for="Name" class="text-danger"></span>
-      </div>
-      <div>
-        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Email"></label>
-        <input class="block w-full rounded-md 
-          border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
-          focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Email">
-        <span asp-validation-for="Email" class="text-danger"></span>
-      </div>
+      <input type="hidden" asp-for="Token" value="@ViewBag.Token"/>
       <div>
         <label asp-for="Password" class="block text-sm font-medium leading-6 text-gray-900"></label>
         <input class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 
